# SoLoClaw-Android-old

./: .gitignore  README.md  settings.gradle.kts
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-11.jsonl  tmux-hook-2026-04-12.jsonl  tmux-hook-2026-04-22.jsonl  turns-2026-04-11.jsonl  turns-2026-04-12.jsonl  turns-2026-04-22.jsonl
.omx/plans/: hermes-parity-android-plan-2026-04-12.md
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
Reference App/hermes-mission-control-main/: .gitignore  ANDROID_WORKFLOW.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Reference App/hermes-mission-control-main/docs/: PHASE1_LIBRARY_REFERENCE.md  PHASE1_TECHNICAL_DOCS.md
Reference App/hermes-mission-control-main/public/: index.html
Reference App/hermes-mission-control-main/public/assets/: index-Bxkfi-gb.js.map  index-Crxm1smF.js  index-Crxm1smF.js.map
Reference App/hermes-mission-control-main/scripts/: android-debug.sh  android-release-install.sh
Reference App/hermes-mission-control-main/src-tauri/: Cargo.toml  tauri.conf.json
Reference App/hermes-mission-control-main/src-tauri/icons/: icon.icns
Reference App/hermes-mission-control-main/src-tauri/src/: agent.rs  api.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  server-main.rs  store.rs
Reference App/hermes-mission-control-main/src-web/src/: App.tsx  main.tsx
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
docs/: GROUP_MESSAGING.md  TALK_MODE.md
(+63 files in other folders)
